force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Score__c</fullName>
    <label>Audit Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>