force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>TW4_Audit_Type__c</fullName>
    <label>Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VV Audit</fullName>
            </value>
            <value>
                <fullName>Requalification Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>