force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Auditors_Formula__c.field-meta.xml
<CustomField>
    <fullName>TW4_Auditors_Formula__c</fullName>
    <formula>TW1_Auditors__c</formula>
    <label>Auditors</label>
    <type>Text</type>
</CustomField>