force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Conclusion_Date_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>TW4_Conclusion_Date_Action_Plan__c</fullName>
    <label>Action Plan - Conclusion Date</label>
    <type>DateTime</type>
</CustomField>