force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Conclusion_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>TW4_Conclusion_Date_Year__c</fullName>
    <formula>YEAR( DATEVALUE(TW1_Conclusion_Date__c))</formula>
    <label>Conclusion Date Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>