force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>TW4_Contractor_Name__c</fullName>
    <formula>TW1_Supplier__r.Name</formula>
    <label>Contractor Name</label>
    <type>Text</type>
</CustomField>