force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Evidences_Analysis_Conclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>TW4_Evidences_Analysis_Conclusion_Date__c</fullName>
    <label>Evidences&apos; Analysis - Conclusion Date</label>
    <type>DateTime</type>
</CustomField>