force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Evidences_Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>TW4_Evidences_Analysis_Status__c</fullName>
    <label>Evidences&apos; Analysis - Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Review Evidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>