force-app/main/default/objects/TW1_Interaction__c/fields/TW4_HSSE_Risk__c.field-meta.xml
<CustomField>
    <fullName>TW4_HSSE_Risk__c</fullName>
    <formula>TEXT(TW1_Supplier__r.TCF_HSSE_Risk__c)</formula>
    <label>HSSE Risk</label>
    <type>Text</type>
</CustomField>