force-app/main/default/objects/TW1_Interaction__c/fields/TW4_New_Suggested_Date__c.field-meta.xml
<CustomField>
    <fullName>TW4_New_Suggested_Date__c</fullName>
    <label>Audit Confirmation - New Suggested Date</label>
    <type>DateTime</type>
</CustomField>