force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Pending_Nonconformities__c.field-meta.xml
<CustomField>
    <fullName>TW4_Pending_Nonconformities__c</fullName>
    <label>Pending Nonconformities</label>
    <summaryFilterItems>
        <field>TW4_Nonconformity__c.TW4_Nonconformity_Action_Filled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TW4_Nonconformity__c.TW4_Interaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>