force-app/main/default/objects/TW1_Interaction__c/fields/TW4_People_Interviewed__c.field-meta.xml
<CustomField>
    <fullName>TW4_People_Interviewed__c</fullName>
    <label>People Interviewed</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>