force-app/main/default/objects/TW1_Interaction__c/fields/TW4_RecordTypeAudit__c.field-meta.xml
<CustomField>
    <fullName>TW4_RecordTypeAudit__c</fullName>
    <formula>CASESAFEID(RecordTypeId) = $Setup.ID_Interaction__c.Id_RecordType_Interaction_Audit__c</formula>
    <label>RecordTypeAudit?</label>
    <type>Checkbox</type>
</CustomField>