force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>TW4_Report_Number__c</fullName>
    <label>Report Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>