force-app/main/default/objects/TW1_Interaction__c/fields/TW4_Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>TW4_Supplier_Email__c</fullName>
    <label>Supplier Email</label>
    <type>Email</type>
</CustomField>