force-app/main/default/objects/TW1_Interaction__c/fields/TW5_All_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>TW5_All_Appraisal__c</fullName>
    <label>All Appraisal</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>