force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Approved_Items_By_OM__c.field-meta.xml
<CustomField>
    <fullName>TW5_Approved_Items_By_OM__c</fullName>
    <label>Approved Items By OM</label>
    <summaryFilterItems>
        <field>TW1_Quality_Inspection_Receipt_Item__c.TW5_Supply_Chain_Status__c</field>
        <operation>equals</operation>
        <value>Approved by OM Representative</value>
    </summaryFilterItems>
    <summaryForeignKey>TW1_Quality_Inspection_Receipt_Item__c.TW1_Quality_Inspection_Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>