force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Delivery_Date_to_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TW5_Delivery_Date_to_Inspection__c</fullName>
    <label>Delivery Date to Inspection</label>
    <type>Date</type>
</CustomField>