force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Emergency_Note__c.field-meta.xml
<CustomField>
    <fullName>TW5_Emergency_Note__c</fullName>
    <label>Emergency Note</label>
    <type>TextArea</type>
</CustomField>