force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Inbound_Base_Date__c.field-meta.xml
<CustomField>
    <fullName>TW5_Inbound_Base_Date__c</fullName>
    <label>Inbound Base Date</label>
    <type>Date</type>
</CustomField>