force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Inspection_Result_Date__c.field-meta.xml
<CustomField>
    <fullName>TW5_Inspection_Result_Date__c</fullName>
    <label>Inspection Result Date</label>
    <type>DateTime</type>
</CustomField>