force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>TW5_Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>