force-app/main/default/objects/TW1_Interaction__c/fields/TW5_International_Company__c.field-meta.xml
<CustomField>
    <fullName>TW5_International_Company__c</fullName>
    <label>International Company?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>