force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Inventory_Management_Coordinator_Ema__c.field-meta.xml
<CustomField>
    <fullName>TW5_Inventory_Management_Coordinator_Ema__c</fullName>
    <label>Inventory Management Coordinator Email</label>
    <type>Email</type>
</CustomField>