force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>TW5_Invoice_Value__c</fullName>
    <label>Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>