force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Items_Rejected_by_Documentation__c.field-meta.xml
<CustomField>
    <fullName>TW5_Items_Rejected_by_Documentation__c</fullName>
    <label>Items Rejected by Documentation</label>
    <summaryFilterItems>
        <field>TW1_Quality_Inspection_Receipt_Item__c.TW1_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TW1_Quality_Inspection_Receipt_Item__c.TW5_Rejection_Reason__c</field>
        <operation>equals</operation>
        <value>Documentation</value>
    </summaryFilterItems>
    <summaryForeignKey>TW1_Quality_Inspection_Receipt_Item__c.TW1_Quality_Inspection_Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>