force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>TW5_Last_Interaction__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + TW5_Last_Interaction_ID__c , TW5_Last_Interaction_Name__c, &apos;_self&apos;)</formula>
    <label>Last Interaction</label>
    <type>Text</type>
</CustomField>