force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Last_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>TW5_Last_Interaction_ID__c</fullName>
    <label>Last Interaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>