force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Last_Item_Approved_By_OM_Approver__c.field-meta.xml
<CustomField>
    <fullName>TW5_Last_Item_Approved_By_OM_Approver__c</fullName>
    <label>Last Item Approved By OM Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>