force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Logistic_1_Email__c.field-meta.xml
<CustomField>
    <fullName>TW5_Logistic_1_Email__c</fullName>
    <label>Logistic 1 Email</label>
    <type>Email</type>
</CustomField>