force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Material_Logistic_Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>TW5_Material_Logistic_Assistant_Email__c</fullName>
    <label>Material Logistic Assistant Email</label>
    <type>Email</type>
</CustomField>