force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Material_Logistic_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>TW5_Material_Logistic_Supervisor_Email__c</fullName>
    <label>Material Logistic Supervisor Email</label>
    <type>Email</type>
</CustomField>