force-app/main/default/objects/TW1_Interaction__c/fields/TW5_OE_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>TW5_OE_Engineer_Email__c</fullName>
    <label>OE Engineer Email</label>
    <type>Email</type>
</CustomField>