force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Operation_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>TW5_Operation_Manager_Email__c</fullName>
    <label>Operation Manager Email</label>
    <type>Email</type>
</CustomField>