force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Priority__c.field-meta.xml
<CustomField>
    <fullName>TW5_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TW5_Inspection_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Immediate</fullName>
            </value>
            <value>
                <fullName>1 - Following Day</fullName>
            </value>
            <value>
                <fullName>2 - Up to 48h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>