force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Procurement_Analyst_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>TW5_Procurement_Analyst_Specialist_Email__c</fullName>
    <label>Procurement Analyst Specialist Email</label>
    <type>Email</type>
</CustomField>