force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Quality_Receipt_Items_Created__c.field-meta.xml
<CustomField>
    <fullName>TW5_Quality_Receipt_Items_Created__c</fullName>
    <label>Quality Receipt Items Created</label>
    <summaryForeignKey>TW1_Quality_Inspection_Receipt_Item__c.TW1_Quality_Inspection_Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>