force-app/main/default/objects/TW1_Interaction__c/fields/TW5_RecordTypeQualityReceiptInspection__c.field-meta.xml
<CustomField>
    <fullName>TW5_RecordTypeQualityReceiptInspection__c</fullName>
    <formula>CASESAFEID(RecordTypeId) = $Setup.ID_Interaction__c.Id_RecordType_Interaction_Quality_R_Insp__c</formula>
    <label>RecordTypeQualityReceiptInspection?</label>
    <type>Checkbox</type>
</CustomField>