force-app/main/default/objects/TW1_Interaction__c/fields/TW5_RecordTypeQualityReceiptInspectionRe__c.field-meta.xml
<CustomField>
    <fullName>TW5_RecordTypeQualityReceiptInspectionRe__c</fullName>
    <formula>CASESAFEID(RecordTypeId) = $Setup.ID_Interaction__c.Id_RecordType_Interaction_Qual_R_Insp_Re__c</formula>
    <label>RecordTypeQualityReceiptInspectionRes?</label>
    <type>Checkbox</type>
</CustomField>