force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Send_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>TW5_Send_Inspection_Date__c</fullName>
    <label>Send Inspection Date</label>
    <type>DateTime</type>
</CustomField>