force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Send_Inspection_User__c.field-meta.xml
<CustomField>
    <fullName>TW5_Send_Inspection_User__c</fullName>
    <label>Send Inspection User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>