force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Supply_Chain_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supply_Chain_Interaction_Date__c</fullName>
    <label>Supply Chain - Interaction Date</label>
    <type>DateTime</type>
</CustomField>