force-app/main/default/objects/TW1_Interaction__c/fields/TW5_Supply_Chain_Status__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supply_Chain_Status__c</fullName>
    <label>Supply Chain - Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by OM</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>