force-app/main/default/objects/TW1_Interaction__c/recordTypes/Log_Receipt_Inspection_Material.recordType-meta.xml
<RecordType>
    <fullName>Log_Receipt_Inspection_Material</fullName>
    <active>true</active>
    <label>Log Receipt Inspection (Material)</label>
</RecordType>