force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Announcements_Warnings.recordType-meta.xml
<RecordType>
    <fullName>TW1_Announcements_Warnings</fullName>
    <active>true</active>
    <label>Announcements / Warnings</label>
</RecordType>