force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Audit_Planning_Technical_Visit.recordType-meta.xml
<RecordType>
    <fullName>TW1_Audit_Planning_Technical_Visit</fullName>
    <active>true</active>
    <label>Audit Planning / Technical Visit</label>
</RecordType>