force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Contact_Us.recordType-meta.xml
<RecordType>
    <fullName>TW1_Contact_Us</fullName>
    <active>true</active>
    <label>Contact Us</label>
</RecordType>