force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Deliveries_Ontime.recordType-meta.xml
<RecordType>
    <fullName>TW1_Deliveries_Ontime</fullName>
    <active>true</active>
    <label>Deliveries Ontime</label>
</RecordType>