force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Extrajudicial_Notice.recordType-meta.xml
<RecordType>
    <fullName>TW1_Extrajudicial_Notice</fullName>
    <active>true</active>
    <label>Extrajudicial Notice</label>
</RecordType>