force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Incidents.recordType-meta.xml
<RecordType>
    <fullName>TW1_Incidents</fullName>
    <active>true</active>
    <label>Incidents</label>
</RecordType>