force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Material_Packing_List.recordType-meta.xml
<RecordType>
    <fullName>TW1_Material_Packing_List</fullName>
    <active>false</active>
    <label>Material Packing List (Third-party)</label>
</RecordType>