force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_Meeting.recordType-meta.xml
<RecordType>
    <fullName>TW1_Meeting</fullName>
    <active>true</active>
    <label>Meeting</label>
</RecordType>