force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_QA_QC_Inspection.recordType-meta.xml
<RecordType>
    <fullName>TW1_QA_QC_Inspection</fullName>
    <active>true</active>
    <label>QA/QC Inspection</label>
</RecordType>