force-app/main/default/objects/TW1_Interaction__c/recordTypes/TW1_QA_Receipt_Inspection.recordType-meta.xml
<RecordType>
    <fullName>TW1_QA_Receipt_Inspection</fullName>
    <active>true</active>
    <label>Offshore QA Receipt Inspection (Third-party)</label>
</RecordType>