force-app/main/default/objects/TW1_Interaction__c/validationRules/AuditBeginDateEqualEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AuditBeginDateEqualEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				TW1_Beginning_Date__c = TW1_End_Date__c,
				 RecordType.DeveloperName = &quot;Audit&quot;
				)</errorConditionFormula>
    <errorMessage>You can&apos;t schedule an audit with with the same Beginning and End date.</errorMessage>
</ValidationRule>