force-app/main/default/objects/TW1_Interaction__c/validationRules/CantConfirmAuditWhenAlreadyAppraisal.validationRule-meta.xml
<ValidationRule>
    <fullName>CantConfirmAuditWhenAlreadyAppraisal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.DeveloperName = &quot;Audit&quot;,
			 NOT(ISBLANK(TEXT(TW4_Audit_Appraisal__c))),
				OR (
								ISCHANGED( TW1_Beginning_Date__c ),
												ISCHANGED( TW1_End_Date__c ),
																ISCHANGED( TW1_Location_Base__c ),
																				ISCHANGED( Scope__c ),
																								ISCHANGED(TW1_Auditors__c),
																												ISCHANGED(  TW1_Comments__c )
								)
)</errorConditionFormula>
    <errorMessage>Can&apos;t reschedule an audit when it has already had an appraisal.</errorMessage>
</ValidationRule>