force-app/main/default/objects/TW1_Interaction__c/validationRules/CantSendQRInspWOQRInspItem.validationRule-meta.xml
<ValidationRule>
    <fullName>CantSendQRInspWOQRInspItem</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED(TW5_Quality_Receipt_Status__c),
				 ISPICKVAL(TW5_Quality_Receipt_Status__c, &quot;Submitted&quot;),
				 TW5_Quality_Receipt_Items_Created__c = 0
				)</errorConditionFormula>
    <errorMessage>You can&apos;t send an Inspection without at least one Item created.</errorMessage>
</ValidationRule>