force-app/main/default/objects/TW1_Interaction__c/validationRules/DateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DateValidation</fullName>
    <active>true</active>
    <description>The end date can&apos;t be less than beginning date.</description>
    <errorConditionFormula>IF( 

OR((ISBLANK(TW1_Beginning_Date__c)),

(ISBLANK(TW1_End_Date__c))), False,

IF(TW1_Beginning_Date__c &gt; TW1_End_Date__c, true, false))</errorConditionFormula>
    <errorMessage>The end date can&apos;t be less than beginning date.</errorMessage>
</ValidationRule>