force-app/main/default/objects/TW1_Interaction__c/validationRules/GarantiaFluxoIncidente.validationRule-meta.xml
<ValidationRule>
    <fullName>GarantiaFluxoIncidente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(AND(NOT(ISPICKVAL(PRIORVALUE(TW1_Status__c), &apos;Sent incident to supplier&apos;)),
           PRIORVALUE(SentToSupplier__c),
           NOT(AND(ISPICKVAL(IncidentResponseModec__c, &apos;Return&apos;),
                   ISPICKVAL(PRIORVALUE(TW1_Status__c), &apos;Incident responded&apos;),
                   ISPICKVAL(TW1_Status__c, &apos;Sent incident to supplier&apos;)
               )
           )
       ),
       ISPICKVAL(PRIORVALUE(TW1_Status__c), &apos;Cancelled&apos;)
    ),
    ISPICKVAL(TW1_Status__c, &apos;Sent incident to supplier&apos;)
)</errorConditionFormula>
    <errorMessage>This incident has already been submitted or cancelled.</errorMessage>
</ValidationRule>