force-app/main/default/objects/TW1_Interaction__c/validationRules/IncidentBloqueioDeCamposAposEnvio.validationRule-meta.xml
<ValidationRule>
    <fullName>IncidentBloqueioDeCamposAposEnvio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;TW1_Incidents&apos;,
    NOT(ISPICKVAL(TW1_Status__c,&apos;New incident treatment&apos;)),
    OR(ISCHANGED(TW1_Subject__c),
       ISCHANGED(TW1_Supplier__c),
       ISCHANGED(PessoasLesionadas__c),
       ISCHANGED(QuaisPessoasForamLesionadas__c),
       ISCHANGED(AdictionalEmail1__c),
       ISCHANGED(AdictionalEmail2__c),
       ISCHANGED(AdictionalEmail3__c),
       ISCHANGED(AdictionalEmail4__c),
       ISCHANGED(AdictionalEmail5__c),
       ISCHANGED(AdictionalEmail6__c),
       ISCHANGED(TW1_Incident_Classification__c),
       ISCHANGED(TW1_Incident_Type__c),
       ISCHANGED(TW1_Incident_Subtype__c),
       ISCHANGED(TW1_Incident_Title__c),
       ISCHANGED(TW1_Description__c),
       ISCHANGED(TW1_Facility__c),
       ISCHANGED(TW1_High_Potencial__c),
       ISCHANGED(TW1_MIMS_Number_Investigation__c),
       ISCHANGED(TW1_Date_of_Occurrence__c)
    )
)</errorConditionFormula>
    <errorMessage>After sending an incident you cannot update it</errorMessage>
</ValidationRule>