force-app/main/default/objects/TW1_Interaction__c/validationRules/InspectionTypeEmergencyNoteNotFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>InspectionTypeEmergencyNoteNotFilled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.DeveloperName = &quot;TW1_Receipt_Inspection&quot;,
				ISPICKVAL(TW5_Inspection_Type__c, &quot;Emergency&quot;),
    ISBLANK(TW5_Emergency_Note__c)
				)</errorConditionFormula>
    <errorMessage>You can&apos;t set this Inspection as Emergency without an Emergency Note.</errorMessage>
</ValidationRule>