force-app/main/default/objects/TW1_Interaction__c/validationRules/ObrigatoriedadePessoasLesionadas.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadePessoasLesionadas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PessoasLesionadas__c,ISBLANK(QuaisPessoasForamLesionadas__c))</errorConditionFormula>
    <errorDisplayField>QuaisPessoasForamLesionadas__c</errorDisplayField>
    <errorMessage>This field is necessary when there are people affected.</errorMessage>
</ValidationRule>