force-app/main/default/objects/TW1_Interaction__c/validationRules/ShippingValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ShippingValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED ( TW1_Shipping_Evidence__c ),
NOT(ISPICKVAL( TW1_Status__c , &quot;Validated Notification&quot;))

)</errorConditionFormula>
    <errorMessage>Evidence can only be attached if approved by the Legal team.</errorMessage>
</ValidationRule>