force-app/main/default/objects/TW1_Interaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TW1_Subject__c</columns>
    <columns>TW1_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TW1_Subject__c</field>
        <operation>notEqual</operation>
        <value>contact us</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TW1_Interaction__c.TW1_Extrajudicial_Notice</value>
    </filters>
    <label>All</label>
</ListView>