force-app/main/default/objects/TW1_Interaction__c/listViews/All_Incidents.listView-meta.xml
<ListView>
    <fullName>All_Incidents</fullName>
    <columns>NAME</columns>
    <columns>TW1_Supplier__c</columns>
    <columns>TW1_Incident_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TW1_Status__c</columns>
    <columns>DataLimiteParaTratativa__c</columns>
    <columns>IndicadorPrazo__c</columns>
    <columns>TW1_Conclusion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TW1_Interaction__c.TW1_Incidents</value>
    </filters>
    <label>All Incidents</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Administrator</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>HSEQ_EPCI</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>HSEQ_EPCI_Senegal</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>HSEQ_Operation</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>HSEQ_Operation_Action</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>HSEQ_Operation_Action_Senegal</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>HSEQ_Operation_Senegal</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>