force-app/main/default/objects/TW1_Interaction__c/listViews/Audit.listView-meta.xml
<ListView>
    <fullName>Audit</fullName>
    <columns>NAME</columns>
    <columns>TW1_Subject__c</columns>
    <columns>TW4_Audit_Type__c</columns>
    <columns>TW1_Supplier__c</columns>
    <columns>TW1_Status__c</columns>
    <columns>TW4_Audit_Appraisal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TW1_Conclusion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TW1_Interaction__c.TW1_Extrajudicial_Notice</value>
    </filters>
    <label>Audit</label>
    <sharedTo>
        <role>HSEQ_EPCI</role>
        <role>HSEQ_Operation</role>
        <role>HSEQ_Operation_Action</role>
    </sharedTo>
</ListView>