force-app/main/default/objects/TW1_Interaction__c/listViews/Compliance2_TW1_Interaction.listView-meta.xml
<ListView>
    <fullName>Compliance2_TW1_Interaction</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance2</label>
    <queue>Compliance2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>