force-app/main/default/objects/TW1_Interaction__c/listViews/Compliance_2_Senegal_TW1_Interaction.listView-meta.xml
<ListView>
    <fullName>Compliance_2_Senegal_TW1_Interaction</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance 2 Senegal</label>
    <queue>Compliance_2_Senegal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>