force-app/main/default/objects/TW1_Interaction__c/listViews/Contact_Us.listView-meta.xml
<ListView>
    <fullName>Contact_Us</fullName>
    <columns>NAME</columns>
    <columns>TW1_Supplier__c</columns>
    <columns>TW1_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TW1_Subject__c</field>
        <operation>equals</operation>
        <value>Contact Us</value>
    </filters>
    <label>Contact Us</label>
</ListView>