force-app/main/default/objects/TW1_Interaction__c/listViews/EPCI_Senegal_TW1_Interaction.listView-meta.xml
<ListView>
    <fullName>EPCI_Senegal_TW1_Interaction</fullName>
    <filterScope>Queue</filterScope>
    <label>EPCI Senegal</label>
    <queue>EPCI_Senegal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>